--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
