--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.14.4",
+    "firebase": "^7.24.0",
     "i18next": "^19.4.4",
     "i18next-browser-languagedetector": "^4.1.1",
     "jquery": "^3.5.1",
@@ -17,8 +17,9 @@
     "react-dom": "^16.13.1",
     "react-i18next": "^9.0.10",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.2.2",
     "react-script-tag": "^1.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-scroll": "^1.7.16",
     "react-toggle-button": "^2.2.0",
     "wow.js": "^1.2.2"
